--- a/src/styles/base/_body.scss
+++ b/src/styles/base/_body.scss
@@ -1,3 +1,20 @@
+@import '../utils/import';
+
 body {
-  background-color: blue;
+  background-color: #202020;
+  margin: 0 0 0 0;
+  font-family: 'Roboto', sans-serif;
+  @extend %fill-screen;
+}
+#root {
+  @extend %fill-screen;
+}
+
+.content {
+  @extend %fill-screen;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
 }
