--- a/src/styles/components/_import.scss
+++ b/src/styles/components/_import.scss
@@ -1,1 +1,5 @@
-@import './app';
+@import './button';
+@import './header';
+@import './listAddItem';
+@import './listContainer';
+@import './listItem';
