--- a/src/styles/utils/_extensions.scss
+++ b/src/styles/utils/_extensions.scss
@@ -2,3 +2,9 @@
   height: 100%;
   min-height: 100vh;
 }
+
+%no-appearance {
+  appearance: none;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+}
